добавил фон, лошадь, изменил размер, прыжок игрока...

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div class="game">
       <div id="player"></div>
       <div id="block"></div>
+      <div id="counter"></div>
     </div>
 
     <script src="/script.js"></script>
