--- a/2d_game_browser/index.html
+++ b/2d_game_browser/index.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <div class="counter">0</div>
     <div class="game">
       <div id="player"></div>
       <div id="block"></div>
-      <div id="counter"></div>
     </div>
 
     <script src="/script.js"></script>
